Repositioned search function

--- a/gregslist.html
+++ b/gregslist.html
@@ -19,8 +19,7 @@
     <section class="search">
         <h2 class="search-title">Search Jobs</h2>
         <form action="#">
-            <input type="text" placeholder="Developer, designer, internship...">
-            <!-- <label for="search" class="search-jobs">Search Jobs</label> -->
+            <input type="text" class="search-input" placeholder="Developer, designer, internship...">
             <input type="image" role="button" class="search-button" src="images/magnifying-glass.png" alt="search">
         </form>
     </section>
