Finished page navigation

--- a/gregslist.html
+++ b/gregslist.html
@@ -23,6 +23,11 @@
             <input type="image" role="button" class="search-button" src="images/magnifying-glass.png" alt="search">
         </form>
     </section>
+    <nav class="pages">
+        <a href="#" class="change-page">&lt; prev</a>
+        <span class="page-show">1 to 100 of 179</span>
+        <a href="#" class="change-page">next &gt;</a>
+    </nav>
     <main>
     </main>
 </body>
