--- a/gregslist.html
+++ b/gregslist.html
@@ -29,6 +29,23 @@
         <a href="#" class="change-page">next &gt;</a>
     </nav>
     <main>
+        <ul class="jobs">
+            <li class="job-listing">
+                <span class="listing-date">June 22</span>
+                <a href="#" class="job-link">Technical Project Manager</a>
+                <span class="location">Midtown East</span>
+            </li>
+            <li class="job-listing">
+                <span class="listing-date">June 21</span>
+                <a href="#" class="job-link">Frontend Developer</a>
+                <span class="location">SoHo</span>
+            </li>
+            <li class="job-listing">
+                <span class="listing-date">June 20</span>
+                <a href="#" class="job-link">Senior Python Developer / Cofounder</a>
+                <span class="location">Flatiron</span>
+            </li>
+        </ul>
     </main>
 </body>
 </html>
